--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
         <input type="text" id="fname" name="fname"><br>
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname">
+        <button>Submit</button>
       </form>
 </body>
 </html>
