--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>Website</title>
 </head>
 <body>
+    <h1>Login Page</h1>
     <form>
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname"><br>
